# Earshot

./: README.md
.github/workflows/: tests.yml
earshot/: .gitignore  README.md  laptop-demo.sh
earshot/.github/workflows/: tests.yml
earshot/.superpowers/sdd/: progress.md  release-artifact-platform-report.md  release-pipeline-report.md  release-transaction-report.md  task-1-brief.md  task-1-report.md  task-1-review-package.md  task-2-brief.md  task-2-report.md  task-3-brief.md  task-3-report.md  task-4-brief.md  task-4-report.md  task-5-brief.md  task-5-report.md  task-6-brief.md  task-6-report.md  task-7-brief.md  task-7-report.md  task-8-brief.md  task-8-report.md
earshot/backend/: .gitignore  README.md  pi_alarm_receiver.py  requirements.txt  setup-mongo.sh
earshot/backend/app/: __init__.py  auth.py  authstore.py  config.py  (+4 more)
earshot/docs/: laptop-fallback.md
earshot/earshot/: README.md
earshot/frontend/: README.md  dashboard.html  login.html  package-lock.json  package.json  tsconfig.json  virtual-puck.html  wearable.html
earshot/hardware/: forearm_carrier.stl  print_plate_both.stl  wrist_mount.stl
earshot/ml/: README.md  pyproject.toml
earshot/ml/earshot_ml/: alarm_data.py  alarm_model.py  alarm_training.py  artifacts.py  cli.py  config.py  core.py  pipeline.py
earshot/ml/tests/: test_alarm_corpus.py  test_alarm_data.py  test_alarm_model.py  test_alarm_training.py  test_artifacts.py  test_cli.py  test_engine.py  test_ml.py  test_packaging.py  test_pipeline.py  test_teach_store_safety.py
earshot/pi/: README.md  alert_poller.py  alert_server.py
(+44 files in other folders)
