[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "earshot-ml"
version = "0.1.0"
requires-python = ">=3.10,<3.15"
dependencies = [
    "numpy",
    "sounddevice",
    "ai-edge-litert; platform_machine != 'armv7l'",
    "tflite-runtime==2.14.0; platform_machine == 'armv7l'",
]

[project.optional-dependencies]
test = ["pytest", "tomli; python_version < '3.11'"]

[project.scripts]
earshot = "earshot_ml.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["earshot_ml*"]

[tool.pytest.ini_options]
markers = [
    "integration: requires downloaded production model artifacts",
]
